# protoc-jsgen-plugin

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Protobuf生成JS方案.md  ProtocJsGenPlugin.sln  main.mjs
.claude/: settings.local.json
ProtocJsGenPlugin/: JsCodeGenerator.cs  Program.cs  ProtocJsGenPlugin.csproj  RequestProcessor.cs  StringExtensions.cs  TypeHelper.cs  TypeResolver.cs
include/: js_code_generator.h  request_processor.h  string_extensions.h  type_helper.h  type_resolver.h
src/: js_code_generator.cc  main.cc  request_processor.cc  string_extensions.cc  type_helper.cc  type_resolver.cc
test/: build.bat  build.mjs  proto.mjs  streaming-example.mjs  test-protobuf-compatibility.mjs  test.mjs  test.proto  test2.mjs  test2.proto
test/proto/: entity.proto  player.proto
test/proto/core/: math.proto
test/proto/pokeworld/actor/: cfg_actor.proto
test/proto/pokeworld/battle/: cs_battle.proto
test/proto/pokeworld/config/: cfg_options.proto  cfg_table.proto
test/proto/pokeworld/entity/: cfg_entity.proto  comm_entity.proto  comm_model.proto
test/proto/pokeworld/inventory/: comm_inventory.proto  cs_inventory.proto
test/proto/pokeworld/math/: comm_math.proto
test/proto/pokeworld/module/: module_id.proto
test/proto/pokeworld/network/: cfg_network.proto
test/proto/pokeworld/player/: cs_player.proto
test/proto/pokeworld/pokemon/: cfg_pokemon.proto
test/proto/pokeworld/resource/: cfg_resource.proto
test/proto/pokeworld/user/: comm_user.proto  cs_user.proto
test/proto/pokeworld/world/: cfg_world.proto  comm_world.proto  cs_world.proto
